--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li> For loop syntax: for (let x = 0; x < shapes.length; x++){}
+            </li>
+            <li>Random example: const randomTopic = topics[Math.floor(Math.random() * topics.length)];</li>
+
+
         </ul>
       </section>
     </main>
