--- a/index.html
+++ b/index.html
@@ -51,9 +51,15 @@
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
-        <ul>
-          <li>Enter your JavaScript notes here</li>
-        </ul>
+        
+<ul>
+  <li>A variable is a named container that allows us to store data in our code.</li>
+  <li>Control flow is the order in which a computer executes code in a script.</li>
+  <li>For loop syntax example
+    for(let x=0; x < 9l x++){}
+  </li>
+  <li> Random example: Math.floor(Math.random() * topics.length)</li>
+</ul>
       </section>
     </main>
 
